# envtoml

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  README.rst  pyproject.toml
.github/workflows/: ci.yml  publish.yml  tests.yml
envtoml/: __init__.py
tests/: test_complex.toml  test_complex_replacement.toml  test_envtoml.py  test_simple.toml  test_simple_replacement.toml
