[project]
name = "envTOML"
version = "0.1.3"
description = "A simple way of using environment variables in TOML configs (via interpolation)"
readme = "README.rst"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "mr.Shu", email = "mr@shu.io" }]
keywords = ["TOML", "environment", "variables", "config"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["toml>=0.10.0"]

[project.urls]
Repository = "https://github.com/mrshu/envtoml"

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "coverage>=7.4",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"
