[project]
name = "envTOML"
version = "0.4.0"
description = "A simple way of using environment variables in TOML configs (via interpolation)"
readme = "README.rst"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "mr.Shu", email = "mr@shu.io" }]
keywords = ["TOML", "environment", "variables", "config"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["tomli>=2.0; python_version < '3.11'"]

[project.urls]
Repository = "https://github.com/mrshu/envtoml"

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "coverage>=7.4",
    "ruff",
    "ty>=0.0.12",
    "tomli>=2.0",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["envtoml"]
include = ["envtoml/py.typed"]

[tool.ty]

[tool.ty.src]
include = ["envtoml", "tests"]

[tool.ty.rules]
invalid-ignore-comment = "error"
unused-ignore-comment = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "single"
